--- a/4DOKKU_MANASA_Lookalike.ipynb
+++ b/4DOKKU_MANASA_Lookalike.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "# Save to CSV\n",
-    "lookalike_df.to_csv('DOKKU_MANASA_Lookalike.csv', index=False)"
+    "lookalike_df.to_csv('3DOKKU_MANASA_Lookalike.csv', index=False)"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookalike = pd.read_csv('DOKKU_MANASA_Lookalike.csv')"
+    "lookalike = pd.read_csv('3DOKKU_MANASA_Lookalike.csv')"
    ]
   },
   {
